# ai-devops-idp

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  desktop.ini  docker-compose.yml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
ai-agent/: .dockerignore  Dockerfile  config.py  k8s_collector.py  log_analyzer.py  main.py  models.py  pyproject.toml  rag_chain.py  requirements.txt
ai-agent/runbooks/: crashloopbackoff.md  imagepullbackoff.md  oomkilled.md  terraform-state-lock.md
ai-agent/tests/: __init__.py  conftest.py  test_api.py  test_log_analyzer.py  test_rag_chain.py  test_runbooks.py
docs/: API.md  SECRETS.md
gitops/argocd/: application.yaml
gitops/base/: ai-agent.yaml  namespace.yaml  network-policy.yaml
gitops/policies/: opa-loadbalancer-tag.yaml
infra/: backend.tf  main.tf  outputs.tf  security.tf  variables.tf
portal/: Dockerfile  README.md
portal/plugins/ai-ops-assistant/src/components/: ChatComponent.tsx
portal/scaffolder-templates/: react-ssr-template.yaml
